# FFXIV-Weather-TUI

./: CMakeLists.txt  LICENSE  README.md  weather.cpp  weather.h
icons/: astromagnetic_storm.ans  blizzards.ans  clear_skies.ans  clouds.ans  dust_storms.ans  fair_skies.ans  fog.ans  gales.ans  gloom.ans  heat_waves.ans  rain.ans  sandstorms.ans  showers.ans  snow.ans  thunder.ans  thunderstorms.ans  umbral_static.ans  umbral_wind.ans  wind.ans
include/: weather.h
src/: TUI.cpp  weather.cpp
